#   Copyright 2014 Commonwealth Bank of Australia
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.


#@namespace scala au.com.cba.omnia.maestro.benchmark.thrift

struct Struct10 {
  1  : string str1
  2  : string str2
  3  : double dbl3
  4  : i32    int4
  5  : i64    long5
  6  : string str6
  7  : string str7
  8  : double dbl8
  9  : i32    int9
  10 : i64    long10
}

struct Struct20 {
  1  : string str1
  2  : string str2
  3  : double dbl3
  4  : i32    int4
  5  : i64    long5
  6  : string str6
  7  : string str7
  8  : double dbl8
  9  : i32    int9
  10 : i64    long10
  11 : string str11
  12 : string str12
  13 : double dbl13
  14 : i32    int14
  15 : i64    long15
  16 : string str16
  17 : string str17
  18 : double dbl18
  19 : i32    int19
  20 : i64    long20
}

struct Struct30 {
  1  : string str1
  2  : string str2
  3  : double dbl3
  4  : i32    int4
  5  : i64    long5
  6  : string str6
  7  : string str7
  8  : double dbl8
  9  : i32    int9
  10 : i64    long10
  11 : string str11
  12 : string str12
  13 : double dbl13
  14 : i32    int14
  15 : i64    long15
  16 : string str16
  17 : string str17
  18 : double dbl18
  19 : i32    int19
  20 : i64    long20
  21 : string str21
  22 : string str22
  23 : double dbl23
  24 : i32    int24
  25 : i64    long25
  26 : string str26
  27 : string str27
  28 : double dbl28
  29 : i32    int29
  30 : i64    long30
}

struct Struct500 {
    1 : string str1
    2 : string str2
    3 : double dbl3
    4 : i32    int4
    5 : i64    long5
    6 : string str6
    7 : string str7
    8 : double dbl8
    9 : i32    int9
   10 : i64    long10
   11 : string str11
   12 : string str12
   13 : double dbl13
   14 : i32    int14
   15 : i64    long15
   16 : string str16
   17 : string str17
   18 : double dbl18
   19 : i32    int19
   20 : i64    long20
   21 : string str21
   22 : string str22
   23 : double dbl23
   24 : i32    int24
   25 : i64    long25
   26 : string str26
   27 : string str27
   28 : double dbl28
   29 : i32    int29
   30 : i64    long30
   31 : string str31
   32 : string str32
   33 : double dbl33
   34 : i32    int34
   35 : i64    long35
   36 : string str36
   37 : string str37
   38 : double dbl38
   39 : i32    int39
   40 : i64    long40
   41 : string str41
   42 : string str42
   43 : double dbl43
   44 : i32    int44
   45 : i64    long45
   46 : string str46
   47 : string str47
   48 : double dbl48
   49 : i32    int49
   50 : i64    long50
   51 : string str51
   52 : string str52
   53 : double dbl53
   54 : i32    int54
   55 : i64    long55
   56 : string str56
   57 : string str57
   58 : double dbl58
   59 : i32    int59
   60 : i64    long60
   61 : string str61
   62 : string str62
   63 : double dbl63
   64 : i32    int64
   65 : i64    long65
   66 : string str66
   67 : string str67
   68 : double dbl68
   69 : i32    int69
   70 : i64    long70
   71 : string str71
   72 : string str72
   73 : double dbl73
   74 : i32    int74
   75 : i64    long75
   76 : string str76
   77 : string str77
   78 : double dbl78
   79 : i32    int79
   80 : i64    long80
   81 : string str81
   82 : string str82
   83 : double dbl83
   84 : i32    int84
   85 : i64    long85
   86 : string str86
   87 : string str87
   88 : double dbl88
   89 : i32    int89
   90 : i64    long90
   91 : string str91
   92 : string str92
   93 : double dbl93
   94 : i32    int94
   95 : i64    long95
   96 : string str96
   97 : string str97
   98 : double dbl98
   99 : i32    int99
  100 : i64    long100
  101 : string str101
  102 : string str102
  103 : double dbl103
  104 : i32    int104
  105 : i64    long105
  106 : string str106
  107 : string str107
  108 : double dbl108
  109 : i32    int109
  110 : i64    long110
  111 : string str111
  112 : string str112
  113 : double dbl113
  114 : i32    int114
  115 : i64    long115
  116 : string str116
  117 : string str117
  118 : double dbl118
  119 : i32    int119
  120 : i64    long120
  121 : string str121
  122 : string str122
  123 : double dbl123
  124 : i32    int124
  125 : i64    long125
  126 : string str126
  127 : string str127
  128 : double dbl128
  129 : i32    int129
  130 : i64    long130
  131 : string str131
  132 : string str132
  133 : double dbl133
  134 : i32    int134
  135 : i64    long135
  136 : string str136
  137 : string str137
  138 : double dbl138
  139 : i32    int139
  140 : i64    long140
  141 : string str141
  142 : string str142
  143 : double dbl143
  144 : i32    int144
  145 : i64    long145
  146 : string str146
  147 : string str147
  148 : double dbl148
  149 : i32    int149
  150 : i64    long150
  151 : string str151
  152 : string str152
  153 : double dbl153
  154 : i32    int154
  155 : i64    long155
  156 : string str156
  157 : string str157
  158 : double dbl158
  159 : i32    int159
  160 : i64    long160
  161 : string str161
  162 : string str162
  163 : double dbl163
  164 : i32    int164
  165 : i64    long165
  166 : string str166
  167 : string str167
  168 : double dbl168
  169 : i32    int169
  170 : i64    long170
  171 : string str171
  172 : string str172
  173 : double dbl173
  174 : i32    int174
  175 : i64    long175
  176 : string str176
  177 : string str177
  178 : double dbl178
  179 : i32    int179
  180 : i64    long180
  181 : string str181
  182 : string str182
  183 : double dbl183
  184 : i32    int184
  185 : i64    long185
  186 : string str186
  187 : string str187
  188 : double dbl188
  189 : i32    int189
  190 : i64    long190
  191 : string str191
  192 : string str192
  193 : double dbl193
  194 : i32    int194
  195 : i64    long195
  196 : string str196
  197 : string str197
  198 : double dbl198
  199 : i32    int199
  200 : i64    long200
  201 : string str201
  202 : string str202
  203 : double dbl203
  204 : i32    int204
  205 : i64    long205
  206 : string str206
  207 : string str207
  208 : double dbl208
  209 : i32    int209
  210 : i64    long210
  211 : string str211
  212 : string str212
  213 : double dbl213
  214 : i32    int214
  215 : i64    long215
  216 : string str216
  217 : string str217
  218 : double dbl218
  219 : i32    int219
  220 : i64    long220
  221 : string str221
  222 : string str222
  223 : double dbl223
  224 : i32    int224
  225 : i64    long225
  226 : string str226
  227 : string str227
  228 : double dbl228
  229 : i32    int229
  230 : i64    long230
  231 : string str231
  232 : string str232
  233 : double dbl233
  234 : i32    int234
  235 : i64    long235
  236 : string str236
  237 : string str237
  238 : double dbl238
  239 : i32    int239
  240 : i64    long240
  241 : string str241
  242 : string str242
  243 : double dbl243
  244 : i32    int244
  245 : i64    long245
  246 : string str246
  247 : string str247
  248 : double dbl248
  249 : i32    int249
  250 : i64    long250
  251 : string str251
  252 : string str252
  253 : double dbl253
  254 : i32    int254
  255 : i64    long255
  256 : string str256
  257 : string str257
  258 : double dbl258
  259 : i32    int259
  260 : i64    long260
  261 : string str261
  262 : string str262
  263 : double dbl263
  264 : i32    int264
  265 : i64    long265
  266 : string str266
  267 : string str267
  268 : double dbl268
  269 : i32    int269
  270 : i64    long270
  271 : string str271
  272 : string str272
  273 : double dbl273
  274 : i32    int274
  275 : i64    long275
  276 : string str276
  277 : string str277
  278 : double dbl278
  279 : i32    int279
  280 : i64    long280
  281 : string str281
  282 : string str282
  283 : double dbl283
  284 : i32    int284
  285 : i64    long285
  286 : string str286
  287 : string str287
  288 : double dbl288
  289 : i32    int289
  290 : i64    long290
  291 : string str291
  292 : string str292
  293 : double dbl293
  294 : i32    int294
  295 : i64    long295
  296 : string str296
  297 : string str297
  298 : double dbl298
  299 : i32    int299
  300 : i64    long300
  301 : string str301
  302 : string str302
  303 : double dbl303
  304 : i32    int304
  305 : i64    long305
  306 : string str306
  307 : string str307
  308 : double dbl308
  309 : i32    int309
  310 : i64    long310
  311 : string str311
  312 : string str312
  313 : double dbl313
  314 : i32    int314
  315 : i64    long315
  316 : string str316
  317 : string str317
  318 : double dbl318
  319 : i32    int319
  320 : i64    long320
  321 : string str321
  322 : string str322
  323 : double dbl323
  324 : i32    int324
  325 : i64    long325
  326 : string str326
  327 : string str327
  328 : double dbl328
  329 : i32    int329
  330 : i64    long330
  331 : string str331
  332 : string str332
  333 : double dbl333
  334 : i32    int334
  335 : i64    long335
  336 : string str336
  337 : string str337
  338 : double dbl338
  339 : i32    int339
  340 : i64    long340
  341 : string str341
  342 : string str342
  343 : double dbl343
  344 : i32    int344
  345 : i64    long345
  346 : string str346
  347 : string str347
  348 : double dbl348
  349 : i32    int349
  350 : i64    long350
  351 : string str351
  352 : string str352
  353 : double dbl353
  354 : i32    int354
  355 : i64    long355
  356 : string str356
  357 : string str357
  358 : double dbl358
  359 : i32    int359
  360 : i64    long360
  361 : string str361
  362 : string str362
  363 : double dbl363
  364 : i32    int364
  365 : i64    long365
  366 : string str366
  367 : string str367
  368 : double dbl368
  369 : i32    int369
  370 : i64    long370
  371 : string str371
  372 : string str372
  373 : double dbl373
  374 : i32    int374
  375 : i64    long375
  376 : string str376
  377 : string str377
  378 : double dbl378
  379 : i32    int379
  380 : i64    long380
  381 : string str381
  382 : string str382
  383 : double dbl383
  384 : i32    int384
  385 : i64    long385
  386 : string str386
  387 : string str387
  388 : double dbl388
  389 : i32    int389
  390 : i64    long390
  391 : string str391
  392 : string str392
  393 : double dbl393
  394 : i32    int394
  395 : i64    long395
  396 : string str396
  397 : string str397
  398 : double dbl398
  399 : i32    int399
  400 : i64    long400
  401 : string str401
  402 : string str402
  403 : double dbl403
  404 : i32    int404
  405 : i64    long405
  406 : string str406
  407 : string str407
  408 : double dbl408
  409 : i32    int409
  410 : i64    long410
  411 : string str411
  412 : string str412
  413 : double dbl413
  414 : i32    int414
  415 : i64    long415
  416 : string str416
  417 : string str417
  418 : double dbl418
  419 : i32    int419
  420 : i64    long420
  421 : string str421
  422 : string str422
  423 : double dbl423
  424 : i32    int424
  425 : i64    long425
  426 : string str426
  427 : string str427
  428 : double dbl428
  429 : i32    int429
  430 : i64    long430
  431 : string str431
  432 : string str432
  433 : double dbl433
  434 : i32    int434
  435 : i64    long435
  436 : string str436
  437 : string str437
  438 : double dbl438
  439 : i32    int439
  440 : i64    long440
  441 : string str441
  442 : string str442
  443 : double dbl443
  444 : i32    int444
  445 : i64    long445
  446 : string str446
  447 : string str447
  448 : double dbl448
  449 : i32    int449
  450 : i64    long450
  451 : string str451
  452 : string str452
  453 : double dbl453
  454 : i32    int454
  455 : i64    long455
  456 : string str456
  457 : string str457
  458 : double dbl458
  459 : i32    int459
  460 : i64    long460
  461 : string str461
  462 : string str462
  463 : double dbl463
  464 : i32    int464
  465 : i64    long465
  466 : string str466
  467 : string str467
  468 : double dbl468
  469 : i32    int469
  470 : i64    long470
  471 : string str471
  472 : string str472
  473 : double dbl473
  474 : i32    int474
  475 : i64    long475
  476 : string str476
  477 : string str477
  478 : double dbl478
  479 : i32    int479
  480 : i64    long480
  481 : string str481
  482 : string str482
  483 : double dbl483
  484 : i32    int484
  485 : i64    long485
  486 : string str486
  487 : string str487
  488 : double dbl488
  489 : i32    int489
  490 : i64    long490
  491 : string str491
  492 : string str492
  493 : double dbl493
  494 : i32    int494
  495 : i64    long495
  496 : string str496
  497 : string str497
  498 : double dbl498
  499 : i32    int499
  500 : i64    long500
}
